# bot-posts-linkedin

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  firestore.indexes.json  pyproject.toml
prompts/: post_generation_system.txt
scripts/: gcp_container_scanning.sh  gcp_create_service_account.sh  gcp_deploy.sh  gcp_deploy_split.sh  gcp_firestore_indexes.sh  gcp_firestore_ttl_setup.sh  gcp_secrets_sync.sh  gcp_tasks_queue.sh  register_telegram_webhook.py
src/bot_posts_linkedin/: config.py  main.py  security.py
src/bot_posts_linkedin/domain/: chat_state.py  insights.py  post.py  rejection_cause.py  states.py
src/bot_posts_linkedin/services/: anthropic_client.py  github_search.py  image_generator.py  linkedin_publisher.py  post_flow.py  post_generator.py  task_queue.py  update_dedup.py
src/bot_posts_linkedin/store/: base.py  chat_state_base.py  chat_state_firestore.py  chat_state_memory.py  firestore.py  memory.py
src/bot_posts_linkedin/telegram/: client.py  keyboards.py  messages.py  parser.py  webhook.py  worker.py
tests/: fakes.py  test_chat_state_store.py  test_config.py  test_github_search.py  test_healthz.py  test_image_generator.py  test_linkedin_publisher.py  test_parser.py  test_post_flow_full.py  test_post_flow_insights.py  test_post_flow_limit.py  test_post_flow_mock.py  test_post_flow_publish.py  test_post_generator.py  test_states.py  test_store_firestore.py  test_store_memory.py  test_task_queue.py  test_update_dedup.py  test_webhook.py  test_worker.py
